--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,12 +77,9 @@ header {
 #subscribe-main {
     margin-top: -8vh;
 }
-
-#bg-img {
+#home-page-bg-img {
     width: 100%;
-    margin-top: -8vh;
     object-fit: contain;
-
 }
 
 
@@ -960,3 +957,46 @@ footer {
     margin-top: 20px;
     margin-right: 2px;
 }
+
+
+
+  /* Countdown in subscription-confirmation page */
+  #countdown {
+    text-align: center;
+    overflow: hidden;
+    height: 50px;
+    width: 50px;
+    margin: 0 auto;
+  }
+  
+  .countdown-wrapper {
+    width: 500px;
+    -webkit-animation: time 10s ease infinite;
+  }
+  
+  .time {
+    float:left;
+    height: 50px;
+    width: 50px;
+  }
+  
+  .remaining-time {
+    color: #000;
+    text-align: center;
+    font-size: 1rem;
+  }
+  
+  @-webkit-keyframes time {
+    10% {margin-left: 0px;}
+    20% {margin-left: -50px;}
+    30% {margin-left: -100px;}
+    40% {margin-left: -150px;}
+    50% {margin-left: -200px;}
+    60% {margin-left: -250px;}
+    70% {margin-left: -300px;}
+    80% {margin-left: -350px;}
+    90% {margin-left: -400px;}
+    100% {margin-left: -450px;}
+
+  }
+  
